--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,8 +468,9 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url('../img/hero-bg.jpg') top left;
+  background: url('../img/hero-bg.jpg') center center;
   background-size: cover;
+  background-position: center;
   position: relative;
 }
 
